force-app/main/default/objects/Player_Response__c/Player_Response__c.object-meta.xml
<CustomObject>
    <label>Player Response</label>
    <nameField>
        <displayFormat>PlayerResponse-{000}</displayFormat>
        <label>Player Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>