force-app/main/default/objects/Player_Response__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Player Responses</relationshipLabel>
    <relationshipName>Player_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>