force-app/main/default/objects/Player_Response__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Player Responses</relationshipLabel>
    <relationshipName>Player_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>