force-app/main/default/objects/Player_Response__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>