force-app/main/default/objects/Player_Response__c/fields/Story_ID__c.field-meta.xml
<CustomField>
    <fullName>Story_ID__c</fullName>
    <label>Story ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>